[gd_scene load_steps=6 format=3 uid="uid://bjc34mirtiy0w"]

[ext_resource type="Script" uid="uid://by01jraxw5v61" path="res://Dialogs/fiiish_confirmation_dialog.gd" id="1_3nvp5"]
[ext_resource type="Script" uid="uid://0y8v6gxx5db6" path="res://Scenes/fadeable_container.gd" id="2_2c3hr"]
[ext_resource type="Texture2D" uid="uid://c68hi10ws5uut" path="res://Textures/UI/confirmation_frame_v2.png" id="3_f3ec8"]
[ext_resource type="Texture2D" uid="uid://c0etl38vn3bw6" path="res://Textures/UI/Buttons/button_cross.png" id="4_1dldt"]
[ext_resource type="Texture2D" uid="uid://cnbxk2ekrux0c" path="res://Textures/UI/Buttons/button_play.png" id="5_8dk8x"]

[node name="FiiishConfirmationDialog" type="Control"]
z_index = 20
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3nvp5")

[node name="FadeableContainer" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_2c3hr")
metadata/_custom_type_script = "uid://ckhevounoe7f4"

[node name="ColorRect" type="ColorRect" parent="FadeableContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.0902, 0.661877, 0.82, 0.25098)

[node name="TextureRect" type="TextureRect" parent="FadeableContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("3_f3ec8")

[node name="MarginContainer" type="MarginContainer" parent="FadeableContainer/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 110
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="FadeableContainer/TextureRect/MarginContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"SkillsHeaderLabel"
text = "[Please set me!]"

[node name="DescriptionLabel" type="Label" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_type_variation = &"SkillsHeaderLabel"
text = "[Please set me too!]"

[node name="HBoxContainer" type="HBoxContainer" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="CancelTextureButton" type="TextureButton" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
texture_normal = ExtResource("4_1dldt")

[node name="ConfirmTextureButton" type="TextureButton" parent="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
texture_normal = ExtResource("5_8dk8x")

[connection signal="on_faded_in" from="FadeableContainer" to="." method="_on_faded_in"]
[connection signal="on_faded_out" from="FadeableContainer" to="." method="_on_faded_out"]
[connection signal="on_fading_in" from="FadeableContainer" to="." method="_on_fading_in"]
[connection signal="on_fading_out" from="FadeableContainer" to="." method="_on_fading_out"]
[connection signal="pressed" from="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/CancelTextureButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="FadeableContainer/TextureRect/MarginContainer/VBoxContainer/HBoxContainer/ConfirmTextureButton" to="." method="_on_confirm_button_pressed"]
